# tree-sitter-abs

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  grammar_mine.js  package.json  pyproject.toml  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_abs/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterAbsTests/: TreeSitterAbsTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
