[package]
name = "tree-sitter-abs"
description = "Parser for Abs (abs-lang.org)"
version = "1.0.0"
authors = ["Jacek Karaskiewicz <jacek.karaskiewicz@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "abs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/abs-lang/abs"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
